avenir bold fixed and other way of text wrapping realization

--- a/styles/main.css
+++ b/styles/main.css
@@ -119,15 +119,28 @@ h1 {
     .main-content .content-block-review .smaller-headline {
       font-family: "Roboto", sans-serif; }
     .main-content .content-block-review .user-photo {
-      float: left;
       width: 50px;
       height: 50px;
       border-radius: 50%;
       background-color: #c4c4c4;
-      margin-right: 20px; }
+      margin-right: 20px;
+      margin-top: 0;
+      margin-bottom: 0;
+      grid-column: 1 / 2;
+      grid-row: 1 / 3; }
+    .main-content .content-block-review .reveiw-conteiner {
+      width: 200px;
+      height: 50px;
+      display: grid;
+      grid-template-columns: auto auto;
+      grid-template-rows: auto auto; }
     .main-content .content-block-review .user-name {
-      margin: 10px 20px;
+      margin: 0;
       font-weight: bold; }
+    .main-content .content-block-review .review-date {
+      margin: 0;
+      -ms-flex-item-align: end;
+          align-self: end; }
   .main-content .content-block-host-information {
     margin-top: 40px; }
     .main-content .content-block-host-information .host-place {
@@ -294,7 +307,7 @@ h1 {
   font-family: "Avenir Heavy";
   src: url("../fonts/Avenir-Heavy.ttf") format("truetype");
   font-weight: normal;
-  font-style: normal; }
+  font-style: bold; }
 
 html {
   font-family: "Avenir", sans-serif;
